<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main_container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorBackground"
    tools:context=".profile_edit">









































































































































    <android.support.design.widget.BottomNavigationView
        android:id="@+id/main_navigation"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="?android:attr/windowBackground"
        app:itemBackground="@color/colorField"
        app:itemIconTint="@color/colorHeaven"
        app:itemTextColor="@color/colorLogin"
        app:labelVisibilityMode="unlabeled"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:menu="@menu/navigation" >

    </android.support.design.widget.BottomNavigationView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:layout_editor_absoluteY="61dp">

        <TextView
            android:id="@+id/textView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorField"
            android:gravity="center"
            android:padding="20dp"
            android:text="@string/Lepak_Intern"
            android:textColor="@color/colorHeaven"
            android:textSize="18sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="645dp"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="20dp"
            android:layout_marginRight="20dp"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/textProfile"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="20dp"
                    android:layout_weight="1"
                    android:text=" Edit Profile"
                    android:textColor="@color/colorHeaven"
                    android:textSize="18sp" />

                <TextView
                    android:id="@+id/matric"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="20dp"
                    android:layout_weight="1"
                    android:gravity="right"
                    android:text="@string/profile"
                    android:textColor="@color/colorLogin"
                    android:textSize="18sp" />
            </LinearLayout>

            <EditText
                android:id="@+id/editEmail"
                android:layout_width="match_parent"
                android:layout_height="55dp"
                android:layout_marginBottom="20dp"
                android:background="@drawable/ic_loginfield"
                android:ems="10"
                android:gravity="center|center_vertical"
                android:hint="@string/email"
                android:inputType="textPersonName"
                android:textColor="@color/colorHeaven"
                android:textColorHint="@color/colorLogin" />

            <EditText
                android:id="@+id/editPhone"
                android:layout_width="match_parent"
                android:layout_height="55dp"
                android:layout_marginBottom="20dp"
                android:background="@drawable/ic_loginfield"
                android:ems="10"
                android:gravity="center"
                android:hint="Phone"
                android:inputType="textPersonName"
                android:textColor="@color/colorHeaven"
                android:textColorHint="@color/colorLogin" />

            <EditText
                android:id="@+id/oldPassword"
                android:layout_width="match_parent"
                android:layout_height="55dp"
                android:layout_marginRight="5dp"
                android:layout_marginBottom="20dp"
                android:layout_weight="0"
                android:background="@drawable/ic_loginfield"
                android:ems="10"
                android:gravity="center"
                android:hint="Current Password"
                android:inputType="textPassword"
                android:textColor="@color/colorHeaven"
                android:textColorHint="@color/colorLogin" />

            <Button
                android:id="@+id/buttonUpdate"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/ic_buttonsquare"
                android:text="Edit Profile"
                android:textAllCaps="false"
                android:textSize="16sp" />
        </LinearLayout>

    </LinearLayout>

</android.support.constraint.ConstraintLayout>